Table logentry {
  id integer
  action_time timestamp
  user_id integer [note: 'foreign key to user']
  content_type_id integer [note: 'foreign key to contenttype']
  object_id text
  object_repr varchar
  action_flag integer
  change_message text
}

Table permission {
  id integer
  name varchar
  content_type_id integer [note: 'foreign key to contenttype']
  codename varchar
}

Table group {
  id integer
  name varchar
}

Table user {
  id integer
  password varchar
  last_login timestamp
  username varchar
  first_name varchar
  last_name varchar
  email varchar
  date_joined timestamp
}

Table contenttype {
  id integer
  app_label varchar
  model varchar
}

Table session {
  session_key varchar
  session_data text
  expire_date timestamp
}

Table member {
  id integer
  user_id integer [note: 'foreign key to user']
  phone varchar
  card_number varchar
}

Table store {
  id integer
  store_name varchar
  owner_id integer [note: 'foreign key to member']
}

Table promotion {
  id integer
  store_id integer [note: 'foreign key to store']
  cupsize varchar
  cups integer
  free integer
  name varchar
  details text
  count integer
}

Table coupon {
  id integer
  promotion_id integer [note: 'foreign key to promotion']
  promotion_count integer
  member_id integer [note: 'foreign key to member']
  collect_qr_code_url varchar
  use_qr_code_url varchar
  collected_at timestamp
  used_at timestamp
}

Table scannedqrcode {
  id integer
  scanned_text text
  timestamp timestamp
}

Table storeownerrequest {
  id integer
  user_id integer [note: 'foreign key to user']
  shop_name varchar
  requested_at timestamp
  status varchar
  approved_at timestamp
  approved_by_id integer [note: 'foreign key to user']
}

Table wallet {
  id integer
  member_id integer [note: 'foreign key to member']
  created_at timestamp
  updated_at timestamp
}

Table transaction {
  id integer
  wallet_id integer [note: 'foreign key to wallet']
  transaction_type varchar
  description varchar
  created_at timestamp
}

Ref: logentry.user_id > user.id // many-to-one
Ref: logentry.content_type_id > contenttype.id // many-to-one
Ref: permission.content_type_id > contenttype.id // many-to-one
Ref: member.user_id > user.id // many-to-one
Ref: store.owner_id > member.id // many-to-one
Ref: promotion.store_id > store.id // many-to-one
Ref: coupon.promotion_id > promotion.id // many-to-one
Ref: coupon.member_id > member.id // many-to-one
Ref: storeownerrequest.user_id > user.id // many-to-one
Ref: storeownerrequest.approved_by_id > user.id // many-to-one
Ref: wallet.member_id > member.id // many-to-one
Ref: transaction.wallet_id > wallet.id // many-to-one
